# Mathboard

./: BuildExecutable.iss  CMakeLists.txt  notes.md  tree.txt
.github/workflows/: production.yaml
src/: main.cpp
src/canvas/: Canvas.cpp  Canvas.h  Smoothing.cpp  Smoothing.h  StrokeCapture.cpp  StrokeCapture.h
src/model/: Types.h
